# GameMacroAutomation

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: lua_loop_guide.md  python_script_guide.md
docs/design/: README.md
docs/design/core/: README.md
docs/design/executor/: README.md
docs/design/recorder/: README.md
docs/design/script/: README.md
docs/design/tools/: README.md
docs/examples/: README.md  battle_loop.lua  battle_loop.py  battle_loop.yaml
docs/examples/01_loop_demo/: README.md  main.yaml  test.yaml
docs/examples/02_battle_example/: README.md
docs/examples/basic_combat/: main.py  main.yaml
docs/plans/: 2026-03-16-game-macro-automation.md
src/: __init__.py  main.py
src/core/: __init__.py  config.py  image.py  input.py  logger.py  lua_bridge.py  screen.py
src/executor/: __init__.py  api.py  executor.py
src/recorder/: __init__.py  recorder.py
src/script/: schema.py  validator.py
src/tools/: zone_captor.py
tests/: test_config.py  test_image.py  test_input.py  test_integration.py  test_lua_bridge.py  test_recorder.py  test_screen.py  test_validator.py
